<resources>
    <string name="app_name">Github User</string>
    <string name="founder">Muhammad Gilang Ramadhan</string>
    <string name="user_nofound">User tidak ditemukan\n</string>
    <string name="search_user">Masukkan nama</string>
    <string name="nama">Nama</string>
    <string name="username">Username\n</string>
    <string name="followers">Followers\n</string>
    <string name="following">Following\n</string>
    <string name="followingNumbers">123\n</string>
    <string name="followersNumbers">234\n</string>
    <string name="link">Link in here\n</string>
    <string-array name="tab">
        <item>Followers</item>
        <item>Following</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow_nofound">Following not found</string>
    <string name="follower_nofound">Followers not found</string>
</resources>